# ia-datafortelling

./: .dockerignore  .gitignore  .nais.yaml  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  _quarto.yml  bigquery_utils.py  bq_utils.py  config.py  data_fetching.py  data_prepping.py  ds.py  dtos.py  fetch_metrics.py  index.qmd  leverte-ia-tjenester.qmd  leverte_ia_tjenester_plots.py  logger.py  main.py  main_dev.py  main_kladd.py  nais.yaml  prepare_data.py  publish.py  pyproject.toml  requirements.txt  run.sh  secrets_handler.py  visualization_utils.py
.github/: dependabot.yml
.github/workflows/: deploy-naisjob.yml  ia-datafortelling.yml
.nais/: prod.yaml
common/: data_fetching.py  visualization_utils.py
key_metrics/: data_prepping.py  index.qmd  main.py  plots.py
leverte_ia_tjenester/: data_prepping.py  index.qmd  plots.py
src/leverte_ia_tjenester/: data_prepping.py  plots.py
src/leverte_ia_tjenester/common/: data_fetching.py  visualization_utils.py
