[project]
name = "leverte_ia_tjenester"
version = "0.1.0"
description = "Datafortelling basert på data fra Fia"
authors = [{name="NAV-IT"}]
readme = "README.md"
requires-python = "==3.14.3"
dependencies = [
    "db-dtypes==1.4.4",
    "google-auth==2.48.0",
    "google-cloud-bigquery==3.40.1",
    "ipython==9.11.0",
    "jupyter-client==8.8.0",
    "jupyter-server==2.17.0",
    "logging==0.4.9.6",
    "notebook==7.5.4",
    "numpy==2.4.2",
    "pandas==3.0.1",
    "plotly==6.6.0",
    "requests==2.32.5",
    "tabulate==0.10.0"
]

[build-system]
requires = ["uv_build>=0.8.12,<0.12.0"]
build-backend = "uv_build"

[project.urls]
Repository = "https://github.com/navikt/fia-datafortelling.git"

##### Pytest options
[tool.pytest.ini_options]
addopts = "-ra -q" # reduserer output så lenge alle tester består
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "nbstripout==0.9.1",
    "pre-commit==4.5.1",
    "pytest==8.4.1",
]
